--- a/src/main/resources/static/admin.html
+++ b/src/main/resources/static/admin.html
@@ -3,53 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Simple Banking System</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 40px;
-            background: #f4f6f9;
-        }
+    <link rel="stylesheet" href="/css/style.css">
 
-        h2 {
-            margin-top: 40px;
-        }
-
-        input, select, button {
-            padding: 8px;
-            margin: 5px 0;
-            width: 250px;
-        }
-
-        button {
-            cursor: pointer;
-            background: #2c7be5;
-            color: white;
-            border: none;
-        }
-
-        table {
-            margin-top: 10px;
-            border-collapse: collapse;
-            width: 100%;
-            background: white;
-        }
-
-        table, th, td {
-            border: 1px solid #ddd;
-        }
-
-        th, td {
-            padding: 10px;
-            text-align: left;
-        }
-
-        .card {
-            background: white;
-            padding: 20px;
-            border-radius: 8px;
-            margin-bottom: 20px;
-        }
-    </style>
 </head>
 <body>
 
