--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Simple Banking System</title>
+    <link rel="icon" href="data:,">
     <link rel="stylesheet" href="/css/style.css">
 
 </head>
