--- a/frontend/login.html
+++ b/frontend/login.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Login - Banking System</title>
+
+    <link rel="icon" href="data:,">
     <link rel="stylesheet" href="/css/style.css">
+
 </head>
 <body>
 
