--- a/frontend/register.html
+++ b/frontend/register.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Register - Banking System</title>
+    <link rel="icon" href="data:,">
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
