--- a/backend/src/main/resources/static/customer.html
+++ b/backend/src/main/resources/static/customer.html
@@ -19,6 +19,7 @@
 <!-- Transfer Money -->
 <div class="card">
     <h2>Transfer Money</h2>
+
     <label>From:</label>
     <select id="sourceAccount"></select><br><br>
 
@@ -27,6 +28,22 @@
 
     <input type="number" id="amount" placeholder="Amount"><br><br>
     <button onclick="transferMoney()">Transfer</button>
+</div>
+
+<!-- Deposit -->
+<div class="card">
+    <h2>Deposit</h2>
+    <select id="depositAccount"></select><br><br>
+    <input type="number" id="depositAmount" placeholder="Amount"><br><br>
+    <button onclick="depositMoney()">Deposit</button>
+</div>
+
+<!-- Withdraw -->
+<div class="card">
+    <h2>Withdraw</h2>
+    <select id="withdrawAccount"></select><br><br>
+    <input type="number" id="withdrawAmount" placeholder="Amount"><br><br>
+    <button onclick="withdrawMoney()">Withdraw</button>
 </div>
 
 <!-- Transaction History -->
@@ -46,6 +63,6 @@
     </table>
 </div>
 
-<script src="/js/customer.js"></script>
+<script src="js/customer.js"></script>
 </body>
 </html>
