--- a/frontend/login.html
+++ b/frontend/login.html
@@ -1,30 +1,61 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="miniBankingApp">
 <head>
     <meta charset="UTF-8">
-    <title>Login - Banking System</title>
-
-    <link rel="icon" href="data:,">
-    <link rel="stylesheet" href="/css/style.css">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MBS | Login</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body ng-controller="LoginController" ng-cloak>
 
-<h1>Banking System Login</h1>
+<div class="auth-container">
+    <div class="auth-card">
+        <div style="text-align: center; margin-bottom: 2rem;">
+            <h1 style="color: var(--primary-blue); margin: 0; font-size: 2.5rem;">MBS</h1>
+            <p style="color: #7f8c8d; font-size: 0.9rem;">Secure Internet Banking</p>
+        </div>
 
-<form id="loginForm">
-    <label>Username: </label>
-    <input type="text" id="username" required><br><br>
+        <h2>Login</h2>
 
-    <label>Password: </label>
-    <input type="password" id="password" required><br><br>
+        <form ng-submit="login()">
+            <div class="form-group">
+                <label for="username">Username</label>
+                <input type="text"
+                       id="username"
+                       ng-model="loginData.username"
+                       placeholder="Enter your username"
+                       required>
+            </div>
 
-    <button type="submit">Login</button>
-</form>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password"
+                       id="password"
+                       ng-model="loginData.password"
+                       placeholder="Enter your password"
+                       required>
+            </div>
 
-<!-- Error message -->
-<p id="message" class="error"></p>
+            <div class="error" ng-if="errorMessage" style="margin-bottom: 1rem;">
+                {{errorMessage}}
+            </div>
 
+            <button type="submit"
+                    class="btn-primary"
+                    ng-disabled="isSubmitting">
+                <span ng-if="!isSubmitting">Sign In</span>
+                <span ng-if="isSubmitting">Authenticating...</span>
+            </button>
+        </form>
+
+        <div style="margin-top: 1.5rem; text-align: center; font-size: 0.9rem;">
+            <p>Don't have an account? <a href="register.html" style="color: var(--primary-blue); text-decoration: none; font-weight: bold;">Register here</a></p>
+        </div>
+    </div>
+</div>
+
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
+<script src="js/app.js"></script>
 <script src="js/login.js"></script>
 
 </body>
