--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -6,7 +6,7 @@
     <title>MBS | Admin Dashboard</title>
     <link rel="stylesheet" href="css/style.css">
     <script>
-        // Security check before Angular loads
+        // Pre-boot security check
         const user = JSON.parse(localStorage.getItem('loggedUser'));
         if (!user || user.role.toUpperCase() !== 'ADMIN') {
             window.location.href = 'login.html';
@@ -15,11 +15,46 @@
 </head>
 <body ng-controller="BankingController" ng-cloak>
 
+<div class="modal-overlay" ng-if="showEditModal">
+    <div class="modal-content">
+        <h3>Edit Account #00{{editingAcc.id}}</h3>
+        <p style="font-size: 0.85rem; color: #666; margin-bottom: 20px;">
+            Leave fields blank to keep current values.
+        </p>
+
+        <div class="form-group">
+            <label>Username</label>
+            <input type="text" ng-model="modalData.username" placeholder="{{editingAcc.username}}">
+        </div>
+        <div class="form-group">
+            <label>New Password</label>
+            <input type="password" ng-model="modalData.password" placeholder="Enter new password">
+        </div>
+        <div class="form-group">
+            <label>Role</label>
+            <select ng-model="modalData.role">
+                <option value="">(Keep as {{editingAcc.role}})</option>
+                <option value="USER">CUSTOMER</option>
+                <option value="ADMIN">ADMINISTRATOR</option>
+            </select>
+        </div>
+        <div class="form-group">
+            <label>Balance (₱)</label>
+            <input type="number" ng-model="modalData.balance" placeholder="{{editingAcc.balance | number:2}}" step="0.01">
+        </div>
+
+        <div class="modal-actions" style="display: flex; gap: 10px; margin-top: 25px;">
+            <button class="btn-primary" ng-click="saveModalEdit()" style="flex: 2;">Save Changes</button>
+            <button class="btn-logout" ng-click="closeModal()" style="flex: 1; background: #6c757d; color: white;">Cancel</button>
+        </div>
+    </div>
+</div>
+
 <nav class="navbar">
     <div class="nav-brand">MBS | Administrator Portal</div>
     <div class="nav-user">
         <span>Logged in as: <strong>Admin</strong></span>
-        <button class="btn-logout" ng-click="adminLogout()" style="margin-left: 15px; background: #dc3545; color: white; border: none; padding: 5px 12px; cursor: pointer; border-radius: 4px;">Logout</button>
+        <button class="btn-logout" ng-click="adminLogout()" style="margin-left: 15px;">Logout</button>
     </div>
 </nav>
 
@@ -32,11 +67,11 @@
                 <form ng-submit="createAccount()">
                     <div class="form-group">
                         <label>Username</label>
-                        <input type="text" ng-model="newAccount.username" placeholder="Username" required>
+                        <input type="text" ng-model="newAccount.username" required>
                     </div>
                     <div class="form-group">
                         <label>Password</label>
-                        <input type="password" ng-model="newAccount.password" placeholder="Password" required>
+                        <input type="password" ng-model="newAccount.password" required>
                     </div>
                     <div class="form-group">
                         <label>User Role</label>
@@ -47,9 +82,9 @@
                     </div>
                     <div class="form-group">
                         <label>Initial Balance (₱)</label>
-                        <input type="number" ng-model="newAccount.balance" placeholder="0.00" step="0.01">
+                        <input type="number" ng-model="newAccount.balance" step="0.01">
                     </div>
-                    <button type="submit" class="btn-primary" style="width: 100%;">Register Account</button>
+                    <button type="submit" class="btn-primary">Register Account</button>
                 </form>
             </div>
 
@@ -70,43 +105,64 @@
                     </div>
                     <div class="form-group">
                         <label>Amount (₱)</label>
-                        <input type="number" ng-model="transferData.amount" placeholder="0.00" required step="0.01">
+                        <input type="number" ng-model="transferData.amount" required step="0.01">
                     </div>
-                    <button type="submit" class="btn-primary" style="width: 100%; background-color: #007bff;">Execute Transfer</button>
+                    <button type="submit" class="btn-primary" style="background-color: #007bff;">Execute Transfer</button>
                 </form>
             </div>
         </div>
 
         <div class="main-content">
+
             <div class="card">
                 <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 15px;">
                     <h3 style="margin:0;">Master Account List</h3>
-                    <button ng-click="loadAccounts()" class="btn-refresh" style="width: auto; padding: 5px 15px; cursor: pointer;">Refresh</button>
+                    <div style="display: flex; gap: 10px;">
+                        <input type="text" ng-model="searchUser" placeholder="Search username..." style="max-width: 180px;">
+                        <button class="btn-refresh" ng-click="loadAccounts()" title="Refresh List" style="padding: 8px 12px;">↻</button>
+                    </div>
                 </div>
-                <table class="transaction-table">
-                    <thead>
-                    <tr>
-                        <th>ID</th>
-                        <th>Username</th>
-                        <th>Role</th>
-                        <th>Balance</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr ng-repeat="acc in accounts">
-                        <td>#00{{acc.id}}</td>
-                        <td><strong>{{acc.username}}</strong></td>
-                        <td><span style="font-size: 0.8rem; padding: 2px 8px; border-radius: 4px; background: #eee;">{{acc.role}}</span></td>
-                        <td>₱ {{acc.balance | number:2}}</td>
-                    </tr>
-                    </tbody>
-                </table>
+                <div style="overflow-x: auto;">
+                    <table class="transaction-table">
+                        <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>Username</th>
+                            <th>Role</th>
+                            <th>Balance</th>
+                            <th>Actions</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr ng-repeat="acc in (filteredAccounts = (accounts | filter:{username: searchUser})) | limitTo:5:accPage*5">
+                            <td>#00{{acc.id}}</td>
+                            <td><strong>{{acc.username}}</strong></td>
+                            <td><span class="role-badge">{{acc.role}}</span></td>
+                            <td>₱ {{acc.balance | number:2}}</td>
+                            <td>
+                                <button ng-click="openEditModal(acc)" class="btn-refresh" style="background: #ffc107; padding: 4px 8px; font-size: 0.8rem; border-color: #e0a800; color: #000;">Edit</button>
+
+                                <button ng-if="acc.role !== 'DISABLED'" ng-click="deleteAccount(acc.id)" class="btn-logout" style="padding: 4px 8px; font-size: 0.8rem;">Disable</button>
+                                <button ng-if="acc.role === 'DISABLED'" ng-click="enableAccount(acc.id)" class="btn-primary" style="padding: 4px 8px; font-size: 0.8rem; background-color: var(--success-green); width: auto;">Enable</button>
+                            </td>
+                        </tr>
+                        <tr ng-if="filteredAccounts.length === 0">
+                            <td colspan="5" style="text-align: center; padding: 20px; color: #999;">No accounts found.</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="pagination-row">
+                    <button ng-disabled="accPage == 0" ng-click="accPage = accPage - 1">Prev</button>
+                    <span>Page {{accPage + 1}}</span>
+                    <button ng-disabled="(accPage + 1) * 5 >= filteredAccounts.length" ng-click="accPage = accPage + 1">Next</button>
+                </div>
             </div>
 
             <div class="card" style="margin-top: 20px;">
                 <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 15px;">
                     <h3 style="margin:0;">System-wide Transactions</h3>
-                    <button ng-click="loadTransactions()" class="btn-refresh" style="width: auto; padding: 5px 15px; cursor: pointer;">Refresh</button>
+                    <button class="btn-refresh" ng-click="loadTransactions()" title="Refresh Transactions" style="font-size: 0.85rem; padding: 6px 12px;">↻ Refresh</button>
                 </div>
                 <div style="overflow-x: auto;">
                     <table class="transaction-table">
@@ -120,17 +176,11 @@
                         </tr>
                         </thead>
                         <tbody>
-                        <tr ng-repeat="tx in transactions | orderBy:'-id'">
+                        <tr ng-repeat="tx in transactions | orderBy:'-id' | limitTo:5:txPage*5">
                             <td>#{{tx.id}}</td>
-                            <td>
-                                <span ng-if="tx.sourceAccount"><strong>{{tx.sourceAccount.username}}</strong></span>
-                                <span ng-if="!tx.sourceAccount" style="color: #888; font-style: italic;">(External Deposit)</span>
-                            </td>
-                            <td>
-                                <span ng-if="tx.destinationAccount"><strong>{{tx.destinationAccount.username}}</strong></span>
-                                <span ng-if="!tx.destinationAccount" style="color: #888; font-style: italic;">(Cash Withdrawal)</span>
-                            </td>
-                            <td ng-style="{ 'color': (!tx.destinationAccount ? '#dc3545' : '#28a745'), 'font-weight': 'bold' }">
+                            <td>{{tx.sourceAccount ? tx.sourceAccount.username : '(Deposit)'}}</td>
+                            <td>{{tx.destinationAccount ? tx.destinationAccount.username : '(Withdraw)'}}</td>
+                            <td ng-class="tx.destinationAccount ? 'text-success' : 'text-danger'">
                                 {{ !tx.destinationAccount ? '-' : '+' }} ₱ {{tx.transfer_amount | number:2}}
                             </td>
                             <td style="font-size: 0.85rem; color: #666;">{{tx.date}}</td>
@@ -141,13 +191,18 @@
                         </tbody>
                     </table>
                 </div>
+                <div class="pagination-row">
+                    <button ng-disabled="txPage == 0" ng-click="txPage = txPage - 1">Prev</button>
+                    <span>Page {{txPage + 1}}</span>
+                    <button ng-disabled="(txPage + 1) * 5 >= transactions.length" ng-click="txPage = txPage + 1">Next</button>
+                </div>
             </div>
+
         </div>
     </div>
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
 <script src="js/app.js"></script>
-
 </body>
 </html>
