--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -37,7 +37,7 @@
         <div class="form-group">
             <label>Role</label>
             <select ng-model="modalData.role">
-                <option value="">(Keep as {{editingAcc.role}})</option>
+                <option value="">-- No Change (Currently {{editingAcc.role}}) --</option>
                 <option value="CUSTOMER">CUSTOMER</option>
                 <option value="ADMIN">ADMINISTRATOR</option>
             </select>
