--- a/frontend/login.html
+++ b/frontend/login.html
@@ -49,7 +49,7 @@
         </form>
 
         <div style="margin-top: 1.5rem; text-align: center; font-size: 0.9rem;">
-            <p>Don't have an account? <a href="register.html" style="color: var(--primary-blue); text-decoration: none; font-weight: bold;">Register here</a></p>
+            <p>Don't have an account? <a href="register.html" style="color: var(--primary-blue); text-decoration: none; font-weight: bold;">Registerasda here</a></p>
         </div>
     </div>
 </div>
